@@ -1,3 +1,6 @@
+ * Changed logio reporting of bytes sent for a stream. Should now reflect the actual
+   payload bytes sent to the client.
+ 
 v1.15.14
 --------------------------------------------------------------------------------
  * Removing support for abandoned draft of http-wg regarding cache-digests.
